crates/edm-core/tests/snapshots/views__response_w48.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== RESPONSE  HTTP 200 OK =======================
+--------------+-------------------+
| Field        | Value             |
+==============+===================+
| HEADERS                          |
+--------------+-------------------+
| encrypted    | 1                 |
| fdev-retry   | 0/2               |
| fdev-season  | 4                 |
| fdev-semver  | 4.4.0.3           |
| nonce        | a1b2c3d4e5f6      |
| request-time | 1700000000000     |
| user-agent   | EDGame/11.0/Win64 |
+--------------+-------------------+
