crates/edm-core/tests/snapshots/views__sweep_w200.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== SWEEP RESULTS  4 markets ============================================================================================================================================================================
+------------+----------------+------+------+-----+-----+--------------------------+-----+
|  Market ID | Name           | HTTP | Comm | Sup | Dem | EDDN                     | Try |
+============+================+======+======+=====+=====+==========================+=====+
| 3223343616 | Jaques Station |  200 |    7 |   4 |   3 | sent                     |   1 |
| 3223343617 | Brady Terminal |  200 |    1 |   - |   - | HTTP 400 Bad Request: F~ |   2 |
| 3705689344 | K7Q-B0X        |  500 |    - |   - |   - | -                        |   4 |
| 3806349056 | Colonia Hub    |    - |    - |   - |   - | -                        |   1 |
+------------+----------------+------+------+-----+-----+--------------------------+-----+
