crates/edm-core/tests/snapshots/views__sweep_w48.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== SWEEP RESULTS  4 markets ====================
+------------+----------------+------+------+
|  Market ID | Name           | HTTP | Comm |
+============+================+======+======+
| 3223343616 | Jaques Station |  200 |    7 |
| 3223343617 | Brady Terminal |  200 |    1 |
| 3705689344 | K7Q-B0X        |  500 |    - |
| 3806349056 | Colonia Hub    |    - |    - |
+------------+----------------+------+------+
   columns hidden to fit 48 cols: Try, Sup, Dem,
   EDDN
